tests/baselines/reference/checkSuperCallBeforeThisAccessing8.errors.txt
tests/cases/compiler/checkSuperCallBeforeThisAccessing8.ts(8,9): error TS17008: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== tests/cases/compiler/checkSuperCallBeforeThisAccessing8.ts (1 errors) ====
    class Base {
        constructor(...arg) {
        }
    }
    class Super extends Base {
        constructor() {
            var that = this;
            super();
            ~~~~~~~~
!!! error TS17008: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }